@@ -63,7 +63,7 @@ $(ZMK.releaseArchive).Files += $(addprefix examples/true_false/,Makefile Test.mk
 $(ZMK.releaseArchive).Files += $(addprefix tests/Configure/,Makefile Test.mk)
 $(ZMK.releaseArchive).Files += $(addprefix tests/Directories/,Makefile Test.mk)
 $(ZMK.releaseArchive).Files += $(addprefix tests/Directory/,Makefile Test.mk)
-$(ZMK.releaseArchive).Files += $(addprefix tests/Header/,Makefile Test.mk foo.h include/bar.h)
+$(ZMK.releaseArchive).Files += $(addprefix tests/Header/,Makefile Test.mk foo.h include/bar.h froz.h)
 $(ZMK.releaseArchive).Files += $(addprefix tests/Library.A/,Makefile Test.mk foo.c)
 $(ZMK.releaseArchive).Files += $(addprefix tests/Library.DyLib/,Makefile Test.mk foo.c)
 $(ZMK.releaseArchive).Files += $(addprefix tests/Library.So/,Makefile Test.mk foo.c bar.c)
